--- a/NetCentricComputing/NetCentricComputing/NetCentricComputing.csproj
+++ b/NetCentricComputing/NetCentricComputing/NetCentricComputing.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>NetCentricComputing.FileReadWrite</StartupObject>
+    <StartupObject>NetCentricComputing.LoopTest</StartupObject>
   </PropertyGroup>
 
 </Project>
